[Correcting alignment of home icon in navbar breadcrumbs]

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -524,3 +524,8 @@ div[class^="announcementBar_"] {
 .list-disc > a {
   display: inherit;
 }
+
+/*Correcting alignment of home icon innavbar breadcrumbs*/
+a[class="breadcrumbs__link"]{
+  margin-bottom: -10px;
+}
